--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gatsby": "^1.9.238",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
+    "gatsby-plugin-styled-components": "^2.0.10",
     "react-helmet": "^5.2.0",
     "rebass": "^1.0.7"
   },
